# email

./: Cargo.toml
.github/workflows/: rust.yml
src/: email.rs  main.rs
