[package]
name = "email"
version = "0.1.0"
edition = "2021"
description = "CLI to send emails from terminal"
keywords = ["email", "smtp", "cli"]
license-file = "LICENSE"
repository = "https://github.com/t-webber/email"
readme = "README.md"
categories = ["cli"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
lettre = "0.11.13"
