[package]
name = "email"
version = "0.1.0"
edition = "2021"
description = "CLI to send emails from terminal"
keywords = ["email", "smtp", "cli"]
license-file = "LICENSE"
repository = "https://github.com/t-webber/email"
readme = "README.md"
categories = ["cli"]
authors = ["Tom Webber"]

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
lettre = { version = "0.11.15" }
